quick patches to visual problems on mobile portrait view. took note and will resolve the other problems as soon as I can. responsive web design is fun 😅

--- a/files/css/mqueries.css
+++ b/files/css/mqueries.css
@@ -100,6 +100,78 @@
 /** Smartphones **/
 @media only screen and (max-width: 760px) {
 
+	/* quick visual fix for mobile */
+
+	img.profile {
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+  	width: 22.5%;
+    height: 22.5%;
+    background-position: center;
+    border-radius: 50%;
+    border: 4px solid rgba(255, 255, 255, .5);
+	}
+
+	.home-header-text .seperator {
+		padding: 2px;
+	}
+
+	.home-header-text .seperator span {
+		height: 1px;
+	}
+
+	.home-header-text h2 {
+		margin-top: 6px;
+		font-weight: 400; 
+		color: #fafafa; 
+		letter-spacing: 0.04em;
+		font-size: 18px; 
+		line-height: 20px;
+		text-shadow: 1px 1px #262626;
+		}
+
+	.header-subtitle {
+		font-size: 12px;
+		margin-top: 6px; 
+		font-weight: 300; 
+		color: #fafafa; 
+		letter-spacing: 0.04em;
+		line-height: 14px;
+		text-shadow: 1px 1px #262626;
+	 }
+
+	 .text{
+	 	font-size: 10px;
+		padding: 2.5px 2.5px 2.5px 2.5px;
+
+	 }
+
+	.numbertext-dark {
+		font-size: 10px;
+	}
+
+	.numbertext-light {
+		font-size: 10px;
+	}
+
+	.portfolio-subtitle{
+		left: 50%;
+		right: 50%;
+		text-align: center;
+	}
+
+	.project-name-subtitle{
+		left: 50%;
+		right: 50%;
+		text-align: center;
+	}
+
+
+
+	/* end quick visual fix */
+
 	h1 { font-size: 64px; line-height: 74px; }
 	h2 { font-size: 32px; line-height: 44px; }
 	h3 { font-size: 26px; line-height: 36px; }
@@ -144,6 +216,9 @@
 
 	ul.timeline li:nth-child(n) span {
 		position: relative;
+		left: 50%;
+		right: 50%; /* quick visual fix */
+		font-size: 14px; /* quick visual fix */
 	}
    
 	#portfolio-single aside { border:none; padding-top:0; }
